fix slider white space

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -338,7 +338,7 @@
 }
 .mfp-content{
 	#rtmedia-single-media-container{
-		form{
+		.rtmedia-media{
 			text-align: center;
 			background-color: #333;
 		}
